# ocaml-forester

./: .gitignore  dune-project  flake.nix  forester.opam
lib/core/: Core.ml  Eval.ml  Expand.ml  Rep.ml  Repr.ml  Sem.ml  Syn.ml  dune
lib/frontend/: Analysis.ml  Forest.ml  Store.ml  dune
lib/lsp/: Forester_lsp.ml  LspServer.ml  dune
lib/render/: Render_text.ml  Render_util.ml  Render_xml.ml
test/: dune  store.ml
