(ocamllex Lexer)

(menhir
 (modules Grammar))

(library
 (name Forester)
 (public_name forester.frontend)
 (preprocess
  (pps ppx_deriving.show))
 (libraries
  bwd
  forester.prelude
  forester.core
  forester.render
  ocamlgraph
  xmlm
  eio_main
  str
  yuujinchou
  irmin
  irmin-git.unix))

(env
 (dev
  (flags
   (:standard -w -66-32-33-27-26))))
